2008-09-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added unit a delegate
	  unit test.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/TopLevelTests.cs: Added interface test.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* UnitTests.mdp, MonoDevelop.CSharpBinding,
	  MonoDevelop.CSharpBinding/TopLevelTests.cs, Makefile.am: Added dom
	  parser top level tests.

2008-09-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added persistance tests.

2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Removed persistence
	  tests.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/TestProjectsChecks.cs: Moved serialization
	  engine to MonoDevelop.Core. Use new syntax for specifying attribute
	  scope.

2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomCompilationUnitTests.cs,
	  MonoDevelop.Projects/DomPersistenceTests.cs: Added some tests.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Worked on unit tests.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added some dom
	  persistence tests.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added dom persistence
	  unit tests.

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs: Track api changes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs: New tests for checking
	  solution configuration mappings.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/MSBuildTests.cs: Test fixes.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 
