@@ -1,3 +1,8 @@
+2008-09-10  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.CSharpBinding/TopLevelTests.cs: changed compilation unit
+	  interface.
+
 2008-09-09  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Projects/DomPersistenceTests.cs: Added unit a delegate
